--- a/index.html
+++ b/index.html
@@ -1,17 +1,39 @@
 <!DOCTYPE html>
+<!--
+	This file is part of 'textarea-grid-experiment'.
+	
+	This program is free software: you can redistribute it and/or modify
+	it under the terms of the GNU Affero General Public License as published 
+	by the Free Software Foundation, either version 3 of the License, or
+	(at your option) any later version.
+	
+	This program is distributed in the hope that it will be useful,
+	but WITHOUT ANY WARRANTY; without even the implied warranty of
+	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+	GNU Affero General Public License for more details, at
+	<https://www.gnu.org/licenses/agpl-3.0.en.html>.
+-->
+<!-- Licensing a HTML document is probably overkill, but, well. -->
 <html>
 	<head>
 		<meta charset="utf-8">
 	</head>
 	<body>
-		<textarea id="t1" placeholder="t1"></textarea>
-		<textarea id="t2" placeholder="t2"></textarea>
-		<textarea id="t3" placeholder="t3"></textarea>
-		<textarea id="t4" placeholder="t4"></textarea>
-		<textarea id="t5" placeholder="t5"></textarea>
-		<textarea id="t6" placeholder="t6"></textarea>
-		<textarea id="t7" placeholder="t7"></textarea>
-		<textarea id="t8" placeholder="t8"></textarea>
+		<div id="textareaGrid">
+			<textarea id="t1" placeholder="t1"></textarea>
+			<textarea id="t2" placeholder="t2"></textarea>
+			<textarea id="t3" placeholder="t3"></textarea>
+			<textarea id="t4" placeholder="t4"></textarea>
+			<textarea id="t5" placeholder="t5"></textarea>
+			<textarea id="t6" placeholder="t6"></textarea>
+			<textarea id="t7" placeholder="t7"></textarea>
+			<textarea id="t8" placeholder="t8"></textarea>
+			<textarea id="t9" placeholder="t9"></textarea>
+			<textarea id="t10" placeholder="t10"></textarea>
+			<textarea id="t11" placeholder="t11"></textarea>
+			<textarea id="t12" placeholder="t12"></textarea>
+		</div>
+		<textarea id="mainTextarea" placeholdeer="tm"></textarea>
 	</body>
 	<style>
 		html {
@@ -19,28 +41,34 @@
 			height: 95%;
 		}
 		body {
+			height: 100%;
+			text-align: center;
+		}
+		#textareaGrid {
 			display: grid;
 			grid-gap: 2%;
 			height: 100%;
 		}
-		textarea {
-			font-size: 0.5vw;
+		#textareaGrid textarea {
+			font-size: 0.6vw;
 			resize: none;
-			/*
-			Okay, so the plan is to make them uneditable too.
-			Instead, they're "buttons" that you can press to "open the page".
-			You edit the text there, and once you close with the ESC key,
-			it edits the corresponding textarea in the grid.
-			*/
 		}
 		#t1 { grid-column: 1; }
 		#t2 { grid-column: 2; }
 		#t3 { grid-column: 3; }
 		#t4 { grid-column: 4; }
+		#t5 { grid-column: 5; }
+		#t6 { grid-column: 6; }
 		/*
 		Everything else should follow. 
 		Tell me if this breaks.
 		*/
+		
+		#mainTextarea {
+			display: none;
+			width: 95%; height: 100%;
+			resize: none;
+		}
 	</style>
 	<script src="main.js"></script>
 </html>
